--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -1,49 +1,43 @@
-name: Auto Parse & Merge Lyrics Data
+name: 🔄 Auto Parse and Merge Lyrics Data
 
 on:
   push:
     paths:
-      - 'data_raw/**'
-      - 'scripts/**'
-      - '.github/workflows/update-json.yml'
-    branches:
-      - main
-  workflow_dispatch:   # bisa dijalankan manual
+      - "raw_data/**"
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
 
     steps:
-      - name: 📥 Checkout repository
-        uses: actions/checkout@v4
+    - name: 🧩 Checkout repository
+      uses: actions/checkout@v4
 
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+    - name: 🐍 Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
 
-      - name: 📦 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install rapidfuzz beautifulsoup4 lxml requests
+    - name: 📦 Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install pandas beautifulsoup4 lxml
 
-      - name: 🧩 Parse new raw data
-        run: |
-          echo "🔍 Running parser.py..."
-    python -m scripts.parser
+    - name: 🧠 Parse new raw data
+      run: |
+        echo "🔍 Running parser.py..."
+        python -m scripts.parser
 
-      - name: 🔗 Merge updated data
-        run: |
-          echo "🧠 Merging with existing clean JSON..."
+    - name: 🔗 Merge updated data
+      run: |
+        echo "🧠 Merging with existing clean JSON..."
         python -m scripts.merger
 
-      - name: 💾 Commit & Push changes
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add data_clean/
-          git commit -m "Auto update lyrics data $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-          git push
+    - name: 💾 Commit results
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add clean_data/songs.json || true
+        git commit -m "Auto update songs.json" || echo "No changes to commit"
+        git push
