--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -59,3 +59,8 @@ jobs:
             git push
             echo "🚀 Changes pushed successfully!"
           fi
+- name: 📦 Checkout repo
+  uses: actions/checkout@v4
+  with:
+    fetch-depth: 0
+    token: ${{ secrets.GH_PAT }}
