--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
 
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
@@ -51,16 +51,15 @@ jobs:
 
           git add data_clean/
 
-          # Commit hanya kalau ada perubahan baru
           if git diff --cached --quiet; then
             echo "✅ No changes to commit."
           else
             git commit -m "auto: update lyrics JSON 🪄"
-            git push
+
+            # ✅ Tarik dulu perubahan terbaru biar gak bentrok
+            git pull --rebase origin main || echo "⚠️ No changes to pull, continuing..."
+
+            # ✅ Gunakan GH_PAT kalau tersedia
+            git push https://${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git main
             echo "🚀 Changes pushed successfully!"
           fi
-- name: 📦 Checkout repo
-  uses: actions/checkout@v4
-  with:
-    fetch-depth: 0
-    token: ${{ secrets.GH_PAT }}
