--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -26,12 +26,13 @@ jobs:
           python-version: '3.11'
 
       - name: 📚 Install dependencies (if available)
-        run: |
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            echo "⚠️ No requirements.txt found, skipping..."
-          fi
+  run: |
+    if [ -f requirements.txt ]; then
+      pip install -r requirements.txt
+    else
+      echo "⚠️ No requirements.txt found, skipping..."
+    fi
+    pip install groq beautifulsoup4 lxml
 
       - name: 🤖 Run Groq Parser
         env:
