--- a/.github/workflows/parse-html.yml
+++ b/.github/workflows/parse-html.yml
@@ -1,28 +1,26 @@
-name: Parse HTML
+name: Parse HTML with Hugging Face
 
 on:
   push:
-    branches: [ main ]
+    paths:
+      - 'data_raw/**'
 
 jobs:
   parse:
     runs-on: ubuntu-latest
-
+    env:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}  # Hugging Face API token
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Parse HTML with OpenAI GPT
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: |
-          python scripts/parser_openai.py
+      - name: Run parser
+        run: python scripts/parser_hf.py
