--- a/.github/workflows/hf_parser.yml
+++ b/.github/workflows/hf_parser.yml
@@ -1,24 +1,33 @@
-name: HF HTML Parser
+name: HuggingFace Parser
 
 on:
   push:
-    paths:
-      - "data_raw/**"
+    branches:
+      - main  # Jalankan setiap push ke main branch
+  workflow_dispatch:  # Bisa juga dijalankan manual
 
 jobs:
-  parse:
+  parse_html:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          pip install transformers beautifulsoup4
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install transformers  # library HuggingFace
+        pip install beautifulsoup4
 
-      - name: Run parser
-        run: python parser_hf.py
+    - name: Run HuggingFace parser
+      env:
+        HF_API_KEY: ${{ secrets.HF_API_KEY }}  # Kalau pakai HuggingFace API
+      run: |
+        python scripts/parser_hf.py
