--- a/.github/workflows/hf_parser.yml
+++ b/.github/workflows/hf_parser.yml
@@ -1,10 +1,3 @@
-- name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-        pip install transformers
-        pip install beautifulsoup4
 
 name: HuggingFace Parser
 
@@ -29,9 +22,11 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install transformers  # library HuggingFace
+        pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+        pip install transformers
         pip install beautifulsoup4
 
     - name: Run HuggingFace parser
