--- a/.github/workflows/hf_parser.yml
+++ b/.github/workflows/hf_parser.yml
@@ -3,16 +3,16 @@ name: HuggingFace Parser
 on:
   push:
     branches:
-      - main  # Jalankan setiap push ke main branch
-  workflow_dispatch:  # Bisa juga dijalankan manual
+      - main
+  workflow_dispatch:
 
 jobs:
   parse_html:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -21,13 +21,19 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip install -r requirements.txt || true
         pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-        pip install transformers
-        pip install beautifulsoup4
+        pip install transformers beautifulsoup4
 
-    - name: Run HuggingFace parser
+    - name: Run HuggingFace Parser
       env:
-        HF_API_KEY: ${{ secrets.HF_API_KEY }}  # Kalau pakai HuggingFace API
+        HF_API_KEY: ${{ secrets.HF_API_KEY }}
+      run: python scripts/parser_hf.py
+
+    - name: Commit hasil parsing ke repo
       run: |
-        python scripts/parser_hf.py
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add data_clean/*.json || echo "No JSON to commit"
+        git commit -m "🤖 Update hasil parsing HuggingFace" || echo "Nothing to commit"
+        git push
