--- a/.github/workflows/hf_parser.yml
+++ b/.github/workflows/hf_parser.yml
@@ -30,10 +30,11 @@ jobs:
         HF_API_KEY: ${{ secrets.HF_API_KEY }}
       run: python scripts/parser_hf.py
 
-    - name: Commit hasil parsing ke repo
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add data_clean/*.json || echo "No JSON to commit"
-        git commit -m "🤖 Update hasil parsing HuggingFace" || echo "Nothing to commit"
-        git push
+    - name: Commit and push results
+  run: |
+    git config user.name "github-actions[bot]"
+    git config user.email "github-actions[bot]@users.noreply.github.com"
+    git add data_clean/*.json || echo "No JSON to commit"
+    git commit -m "🤖 Update hasil parsing HuggingFace" || echo "Nothing to commit"
+    git pull --rebase origin main || true
+    git push origin main
