--- a/.github/workflows/hf_parser.yml
+++ b/.github/workflows/hf_parser.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0   # penting agar bisa rebase dan push
+        fetch-depth: 0   # penting agar bisa pull & rebase tanpa konflik
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -37,7 +37,14 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add data_clean/*.json || echo "No JSON to commit"
-        git commit -m "🤖 Update hasil parsing HuggingFace" || echo "Nothing to commit"
+        
+        # pastikan semua perubahan di-stage (termasuk folder baru)
+        git add data_clean || echo "No folder to add"
+        git add data_clean/**/*.json || echo "No JSON to commit"
+
+        # buat commit hanya jika ada perubahan
+        git diff --cached --quiet || git commit -m "🤖 Update hasil parsing HuggingFace"
+
+        # hindari konflik push
         git pull --rebase origin main || true
-        git push origin main
+        git push origin main || echo "⚠️ Push failed, mungkin tidak ada perubahan baru"
