--- a/.github/workflows/hf_parser.yml
+++ b/.github/workflows/hf_parser.yml
@@ -11,29 +11,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # penting agar bisa rebase & push
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-        pip install transformers beautifulsoup4
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          pip install transformers beautifulsoup4 groq
 
-    - name: Run HuggingFace Parser
-      run: python scripts/parser_hf.py
+      - name: Run HuggingFace Parser
+        env:
+          HF_API_KEY: ${{ secrets.HF_API_KEY }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+        run: |
+          if [ -f scripts/parser_groq.py ]; then
+            echo "🚀 Menjalankan parser_groq.py (Groq version)..."
+            python scripts/parser_groq.py
+          else
+            echo "⚙️ Menjalankan parser_hf.py (HuggingFace version)..."
+            python scripts/parser_hf.py
+          fi
 
-    - name: Commit and push results
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add data_clean/*.json || echo "No JSON to commit"
-        git commit -m "🤖 Update hasil parsing HuggingFace" || echo "Nothing to commit"
-        git pull --rebase origin main || true
-        git push origin main
+      - name: Commit and push results
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data_clean/*.json || echo "No JSON to commit"
+          git commit -m "🤖 Update hasil parsing HuggingFace/Groq" || echo "Nothing to commit"
+          git pull --rebase origin main || true
+          git push origin main || echo "Nothing to push"
